allocation-service/allocator-service.yaml
# Define a Service for the fleet-allocator
apiVersion: v1
kind: Service
metadata:
  name: fleet-allocator-backend
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"http":"HTTP"}'
  labels:
    app: fleet-allocator
spec:
  type: NodePort
  selector:
    app: fleet-allocator
  ports:
  - port: 8000
    protocol: TCP
    name: https
    targetPort: fleet-allocator  # retrieve port from deployment config

---
# Deploy a pod to run the fleet-allocator code
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fleet-allocator
  namespace: default
  labels:
    app: fleet-allocator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-allocator
  template:
    metadata:
      labels:
        app: fleet-allocator
    spec:
      serviceAccount: fleet-allocator
      containers:
      - command:
        - /bin/sh
        - -c
        - ./home/service/service --namespace=$(NAMESPACE) --fleetName=$(FLEET_NAME)
      
        name: fleet-allocator
        image: gcr.io/agones-poc/agones-allocation-service:v19
        imagePullPolicy: Always
        ports:
        - name: fleet-allocator
          containerPort: 8000
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
