allocation-service/allocator-ingress.yaml
# Create a single service Ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fleet-allocator-ingress
  labels:
    app: fleet-allocator
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: fleet-allocator-backend
    servicePort: 8000
